// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputText match snapshot BadgeDisabledFalse 1`] = `
<div>
  <div
    class="MuiFormControl-root css-14yckze-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard MuiFormLabel-colorPrimary MuiFormLabel-filled css-ssr94h-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="input-text"
    >
      Label
    </label>
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1af0n5d-MuiInputBase-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input css-yz9k0d-MuiInputBase-input"
        id="input-text"
        placeholder="Name"
        type="text"
        value="hello world"
      />
    </div>
  </div>
</div>
`;

exports[`InputText match snapshot BadgeDisabledFalseRequired 1`] = `
<div>
  <div
    class="MuiFormControl-root css-14yckze-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required css-ssr94h-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="input-text"
    >
      Label
      <span
        aria-hidden="true"
        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1ufxisk-MuiFormLabel-asterisk"
      >
         
        *
      </span>
    </label>
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-formControl css-1af0n5d-MuiInputBase-root"
      required=""
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input Mui-disabled css-yz9k0d-MuiInputBase-input"
        disabled=""
        id="input-text"
        placeholder="Name"
        required=""
        type="text"
        value="hello world"
      />
    </div>
  </div>
</div>
`;
